force-app/main/utilities/logging/objects/Log_Event__e/Log_Event__e.object-meta.xml
<CustomObject>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>