force-app/main/utilities/logging/objects/Log_Event__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>This field determines the level of the log</description>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>