force-app/main/utilities/logging/objects/Log_Event__e/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>This will contain the quiddity of the transaction that generated the log, see Quiddty docs for potential values https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_enum_System_Quiddity.htm#topic-title</description>
    <label>Quiddity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>