force-app/main/utilities/logging/objects/Log_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>This field will contain a reference to the record that the log is associated to</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>