force-app/main/utilities/logging/objects/Log_Event__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>This will hold the id for the transaction this log was generated within</description>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>