force-app/main/utilities/logging/objects/Log_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used to easily identify where the log has come from, it is a picklist to make filtering in list views/reports easier</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>